# python-project-52

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.test.yaml  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt  run_in_deploy.sh  run_in_render.sh
.github/workflows/: linters_check.yml  tests_check.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: constants.py  mixins.py  settings.py  urls.py  utils.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  users.json
task_manager/labels/: admin.py  constants.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: admin.py  constants.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/task_manager/: settings.py
task_manager/tasks/: admin.py  constants.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_executor.py  0003_alter_task_description.py  0004_alter_task_name.py  0005_tasklabel_task_label.py  0006_rename_label_task_labels.py
task_manager/templates/: index.html
task_manager/templates/labels/: label_confirm_delete.html  label_form.html  label_list.html
task_manager/users/: admin.py  constants.py  forms.py  models.py  tests.py  urls.py  views.py
tests/: test_home.py  test_statuses.py  test_tasks.py  test_users.py
tests/fixtures/: users.json
(+16 files in other folders)
