[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Sergey Kim <<sergkim7@gmail.com>>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
python-dotenv = "^1.0.0"
gunicorn = "^20.1.0"
django-bootstrap4 = "^22.3"
pre-commit = "^3.1.1"
django-filter = "^23.1"
whitenoise = "^6.4.0"
rollbar = "^0.16.3"
psycopg2 = "^2.9.6"
coverage = "^7.2.3"
dj-database-url = "0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
